@@ -16,6 +16,12 @@ Start Managed Server (Without Node Manager):
 
         -Xms512m -Xmx1024m -Dspring.profiles.active=dev -DLOG_LOCATION=/etc/log -DENVIRONMENT=dev -Dapp.jpa.logging=SEVERE
 
+        startManagedWebLogic_DEBUG.cmd managedSvr1 http://localhost:7001
+
+        -Xrunjdwp:transport=dt_socket,address=10171,server=y,suspend=n -Xmx512m -XX:MaxPermSize=256m -debug
+
+
+
 
 
 
